# pcb-defect-detection

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  api.py  auto_analyze.py  compare_models.py  confusion_matrix.py  data_download.py  evaluate.py  export_onnx.py  install.py  pre_flight_check.py  pyproject.toml  quick_test.py  ref.md  requirements.txt  run_tests.py  start.py  test_gpu.py  train_baseline.py  train_production.py  transfer_learning.py  validate_project.py  workflow.md
docker/: Dockerfile.api  Dockerfile.train  README.md
docs/: README.md  configuration.md  quickstart.md  troubleshooting.md  workflows.md
logs/: evaluation_report_20251104_194837.txt  onnx_benchmark_20251104_194911.txt  performance_analysis_20251104_194859.txt
requirements/: requirements-common.txt  requirements-cuda.txt  requirements-mac.txt  requirements-rocm.txt
samples/: README.md  generate_sample_dataset.py
scripts/: check_dataset.py  check_image_ranges.py  download_dataset.py
src/: cli.py
src/analysis/: dataset.py  failures.py  quick_suite.py
src/benchmarks/: __init__.py  onnx.py
src/config/: __init__.py
src/deployment/: api.py  export_onnx.py  monitoring.py  quantize.py
src/evaluation/: confusion.py  evaluate.py  interpretability.py  robustness.py
src/pcb_defect_detection/: __init__.py  cli.py
src/pcb_defect_detection/config/: __init__.py
src/setup/: check_dataset.py  check_image_ranges.py  verify.py
src/tracking/: __init__.py  wandb_integration.py
src/training/: baseline.py  cross_validation.py  hyperparameter.py  production.py
tests/: conftest.py  test_api.py  test_benchmark_onnx.py  test_check_dataset.py  test_cli.py  test_config.py  test_confusion.py  test_data_utils.py  test_export_onnx.py  test_gpu.py  test_tracking.py
